--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_bloc: ^8.1.5
-  fl_chart: ^0.69.0
+  #fl_chart: ^0.69.0
   appwrite: ^12.0.4
 
 dev_dependencies:
